[package]
name = "lunar"
version = "0.1.0"
authors = ["Hadrian Rodriguez <hadrian.rodriguez@imdea.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r1cs-core = {git = "https://github.com/scipr-lab/zexe"}
algebra-core = {git = "https://github.com/scipr-lab/zexe"}
ff-fft = {git = "https://github.com/scipr-lab/zexe"}
rand = "0.7.3"

[dev-dependencies]
algebra = {git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["bls12_381"] }
